# nukapp_pc

./: .gitignore  LICENSE  README.md  build-setup.md  components.d.ts  eslint.config.mjs  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  primevue.theme.ts  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.ts  vite.config.ts.timestamp-1724725599521-c7f26089d91c9.mjs
.github/workflows/: main.yml  relesses.yml
.tauri/: env  nuk_app.key  nuk_app.key.pub
CLI/: CLI_Release.cjs
md/: QQ.md
src/: App.vue  interface.ts  logger.ts  main.ts  router.ts  static.data.ts  styles.css  variables.scss  variables.ts
src-nuk/: Cargo.toml  all_course.json
src-nuk/src/: config_reader.rs  main copy.rs  main.rs  main.rs.__  setup.rs
src-tauri/: .env.sample  .taurignore  Cargo.toml  all_course.json  config.example.json  tauri.conf.json
src-tauri/Data/: all_course.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_reader.rs  main.rs  setup.rs  utils.rs
src-tauri/src/commands/: get_all_course.rs  get_user_current_course.rs  get_user_data.rs  get_user_score.rs  login.rs  logout.rs  mod.rs
src-tauri/src/nuk/: course.rs
src-tauri/src/nuk/user/: auth.rs  course.rs  data.rs  mod.rs  score.rs
src/assets/css/: app.scss  colors.scss  scroll.scss  typography.scss
src/components/: CourseDetail.vue  CourseTable.vue  Hyperlink.vue  ScoreCard.vue  ScoreStats.vue  Sidebar.vue  splitter.vue  windowControl.vue  window_control.vue
src/components/Course/: Detail.vue  List.vue  Table.vue
src/components/Debug/: version.vue
src/components/Message/: Toast.vue
src/components/Modals/: LoginModal.vue
src/components/Nav/: Side.vue
src/components/Score/: Card.vue  Stats.vue
src/components/modals/: LoginModal.vue
src/composables/: courseScore.ts  logger.ts  notification.ts  theme.ts
src/layouts/: default.vue
src/locales/: en.json  zh-CN.json  zh-TW.json
src/middleware/: auth.ts
src/pages/: [...all].vue  commands.vue  index.vue  unauthorized.vue
src/pages/course/: view.vue
src/pages/user/: score.vue
src/plugins/: init.ts
src/stores/: CourseScore.ts  CustomCourseData.ts  GlobalState.ts  Notifications.ts  selectedCourse.ts  theme.ts  user.ts
src/types/: interface.ts  types.ts
src/views/: ComponentDev.vue  CourseSelection.vue  Home.vue  NotAuthorized.vue  QQ.vue  ScoreView.vue  Settings.vue  md.vue
