[package]
name = "nukapp_pc"
version = "0.0.0"
description = "NUK App PC"
authors = [ "Henry753951" ]
edition = "2021"

[lib]
name = "nukapp_pc_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.0.0-rc.0"
features = []

[dependencies]
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
window-vibrancy = "0.5.2" # tauri v1 only use v
serde_json = "1.0.128"
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread"
] }
scraper = "0.20.0"
platform-dirs = "0.3.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
dotenv = "0.15.0"
anyhow = "1.0.80"
chrono = "0.4.32"
jsonpath = "0.1.1"
reqwest = { version = "0.11.23", features = [
  "json",
  "blocking",
  "cookies"
] }

[dependencies.tauri]
version = "2.0.0-rc.0"
features = []

[dependencies.serde]
version = "1"
features = [ "derive" ]
